REGRESSION(r268161?): [ macOS ] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=217542 <rdar://problem/70159546>

Reviewed by Youenn Fablet.

Source/WebCore:

When the script calls suspend(), we call AudioDestinationCocoa::stop() to stop rendering and then resolve the suspend promise.
At this point, the script saves the AudioContext's current sample frame and expects this value to not change until the
AudioContext is resumed. The issue was that we previously were potentially resolving the promise on the main thread while
the last rendering quantum was still being processed on the AudioWorklet thread. This meant that the sample frame could
still increase a bit, a short while after the suspend promise has been resolved. To address the issue, we now do a round
trip to the AudioWorklet thread after stopping rendering, to make sure we only resolve the promise after the last rendering
quantum has been processed on the AudioWorklet thread.

No new tests, unskipped existing test.

* Modules/webaudio/AudioDestinationNode.h:
Use an std::atomic<size_t> for AudioDestinationNode's currentSampleFrame since this value is being written by the rendering
thread and read by the main thread.

* Modules/webaudio/OfflineAudioDestinationNode.cpp:
(WebCore::OfflineAudioDestinationNode::startRendering):
* platform/audio/cocoa/AudioDestinationCocoa.cpp:
(WebCore::AudioDestinationCocoa::stop):

Source/WebKit:

When the script calls suspend(), we call AudioDestinationCocoa::stop() to stop rendering and then resolve the suspend promise.
At this point, the script saves the AudioContext's current sample frame and expects this value to not change until the
AudioContext is resumed. The issue was that we previously were potentially resolving the promise on the main thread while
the last rendering quantum was still being processed on the AudioWorklet thread. This meant that the sample frame could
still increase a bit, a short while after the suspend promise has been resolved. To address the issue, we now to a round
trip to the AudioWorklet thread after stopping rendering, to make sure we only resolve the promise after the last rendering
quantum has been processed on the AudioWorklet thread.

* WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp:
(WebKit::RemoteAudioDestinationProxy::stop):

LayoutTests:

Unskip test that should no longer be flaky.

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/231226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269383 268f45cc-cd09-0410-ab3c-d52691b4dbfc